# benchrail

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
LICENSES/: LICENSE  THIRD_PARTY.md
benchrail/: __init__.py  cli.py  pricing.py  pydantic_compat.py  registry.py  versioning.py
benchrail/adapters/: __init__.py  base.py  claude_code.py  codex.py
benchrail/commands/: run.py  validate.py  version.py
benchrail/dto/: __init__.py  config.py  manifest.py  result.py
benchrail/runner/: docker.py  environment.py  git.py  local.py  logging_util.py  orchestrator.py  worker.py
docker/python/: Dockerfile  README.md  entrypoint.sh  setup_python.sh  verify.sh
docker/universal/: Dockerfile  README.md  entrypoint.sh  setup_agents.sh  setup_universal.sh  verify.sh
examples/multi-swe-bench-universal-smoke/: README.md  manifest.json
examples/multi-swe-bench-universal-smoke/caddyserver__caddy-6411/: config.json
examples/multi-swe-bench-universal-smoke/caddyserver__caddy-6411/environment/: run-gold-tests.sh  run-selected-tests.sh  setup.sh
examples/multi-swe-bench-universal-smoke/caddyserver__caddy-6411/patches/: original_swe_test.patch  test.patch
examples/multi-swe-bench-universal-smoke/fmtlib__fmt-3901/: config.json
examples/multi-swe-bench-universal-smoke/fmtlib__fmt-3901/environment/: run-gold-tests.sh  run-selected-tests.sh  (+1 more)
examples/multi-swe-bench-universal-smoke/pydicom__pydicom-1694/: config.json
examples/multi-swe-bench-universal-smoke/tokio-rs__tokio-7139/: config.json
examples/multi-swe-bench-universal-smoke/vuejs__core-11915/: config.json
tests/unit/: test_adapters.py  test_cli.py  test_docker.py  test_dto.py  test_environment.py  test_git.py  test_local.py  test_orchestrator.py  test_pricing.py  test_versioning.py  test_worker.py
(+16 files in other folders)
